chore(build): add compiler warning flags and UTF-8 console support
- Added compiler warning options for MSVC and other compilers
- Enabled UTF-8 encoding support for console in MSVC on Windows
- Improved build configuration with stricter code quality checks
- Updated CMakeLists.txt to enhance compatibility and warnings management

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,13 @@ project(tnrm1n4l C)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 
+# Compiler warnings
+if(MSVC)
+    add_compile_options(/W3)
+else()
+    add_compile_options(-Wall -Wextra)
+endif()
+
 # Source files
 file(GLOB_RECURSE SOURCES "src/*.c")
 
@@ -13,4 +20,8 @@ add_executable(tnrm1n4l ${SOURCES})
 # Windows specifics
 if(WIN32)
     target_link_libraries(tnrm1n4l kernel32 user32)
+    # UTF-8 support for console
+    if(MSVC)
+        target_compile_options(tnrm1n4l PRIVATE /utf-8)
+    endif()
 endif()
